Setting up first call, plus appsettings files.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    //"Default": "Server=host.docker.internal;Database=WattFox;User Id=sa;Password=PW;TrustServerCertificate=True;"
   }
 }
