Added CORS on Program file as a way to allow connection from non-Docker project. Also modified connection string to allow connection to local DB, I hope.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    //"Default": "Server=host.docker.internal;Database=WattFox;User Id=sa;Password=PW;TrustServerCertificate=True;"
+    "Default": "Server=host.docker.internal;Database=(localdb)\\VerbTables;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
