Connection string changes with Simon's help. He also suggested rolling back Sql client to the older one (now installed) to get around some weird connection issues earlier. Also removed authorise decorator since I don't have authorisation set up.
Dapper needs aliasing if table names do not match property names in your local project, otherwise it can't handle the discrepancy, so us AS on the query.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=host.docker.internal;Database=(localdb)\\VerbTables;Integrated Security=True;TrustServerCertificate=True;"
+    "Default": "Server=(localdb)\\VerbTables;Database=Verbs;Trusted_Connection=True;"
   }
 }
